Adicionar suporte ao endpoint de cursos

--- a/package.json
+++ b/package.json
@@ -28,12 +28,18 @@
   "author": "Daniel Marchena Parreira <danielmapar@gmail.ca>",
   "license": "MIT",
   "dependencies": {
+    "async": "^2.4.0",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
     "cors": "^2.7.1",
+    "dotenv": "^4.0.0",
     "express": "^4.13.3",
     "morgan": "^1.8.0",
-    "resource-router-middleware": "^0.6.0"
+    "mysql": "^2.13.0",
+    "promise-mysql": "^3.0.1",
+    "resource-router-middleware": "^0.6.0",
+    "util": "^0.10.3"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
