--- a/package.json
+++ b/package.json
@@ -2,43 +2,24 @@
   "name": "API",
   "version": "0.1.0",
   "description": "Projeto Incluir - ES6 RESTful Express API",
-  "main": "dist",
+  "main": "./bin/www.js",
   "scripts": {
-    "dev": "nodemon -w src --exec \"babel-node src --presets es2015,stage-0\"",
+    "dev": "./node_modules/.bin/nodemon -w ./server -w ./bin --exec \"babel-node ./bin/www.js --presets es2015,stage-0\"",
     "build": "babel src -s -D -d dist --presets es2015,stage-0",
-    "start": "node dist",
-    "prestart": "npm run -s build",
-    "test": "eslint src"
+    "test": "echo \"Erro: nenhum teste especificado\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": "eslint:recommended",
-    "parserOptions": {
-      "ecmaVersion": 7,
-      "sourceType": "module"
-    },
-    "env": {
-      "node": true
-    },
-    "rules": {
-      "no-console": 0,
-      "no-unused-vars": 1
-    }
-  },
+  "keywords": [],
+  "author": "Daniel Marchena Parreira",
   "repository": "ProjetoIncluirUFMG/API",
-  "author": "Daniel Marchena Parreira <danielmapar@gmail.ca>",
   "license": "MIT",
   "dependencies": {
-    "async": "^2.4.0",
-    "bluebird": "^3.5.0",
-    "body-parser": "^1.13.3",
-    "compression": "^1.5.2",
+    "body-parser": "^1.15.2",
     "cors": "^2.7.1",
     "dotenv": "^4.0.0",
-    "express": "^4.13.3",
+    "express": "^4.14.0",
     "morgan": "^1.8.0",
     "mysql": "^2.13.0",
-    "promise-mysql": "^3.0.1",
-    "resource-router-middleware": "^0.6.0",
+    "sequelize": "^3.23.4",
     "util": "^0.10.3"
   },
   "devDependencies": {
@@ -47,6 +28,10 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "eslint": "^3.1.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.10.2",
+    "eslint-plugin-jsx-a11y": "^1.5.5",
+    "eslint-plugin-react": "^5.2.2",
     "nodemon": "^1.9.2"
   }
 }
