--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.3",
     "dotenv": "^4.0.0",
+    "es6-request": "^2.1.7",
     "express": "^4.15.3",
     "jwt-simple": "^0.5.1",
     "morgan": "^1.8.2",
     "mysql2": "^1.3.5",
+    "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
+    "request": "^2.81.0",
     "sequelize": "^4.1.0",
     "util": "^0.10.3"
   },
